# tauta

./: biome.json  index.html  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
src/: home.tsx  main.tsx  mitame.css
src/fonts/: hiragino.css
tauri/: Cargo.toml  tauri.conf.json
tauri/icons/: icon.icns
