[package]
name = "tauri"
version = "0.1.0"
description = "tauri"
authors = ["kyohenoki"]
edition = "2024"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tauri = {version = "2.8.5", features = []}
tauri-plugin-opener = "2.5.0"
